# gavins-v1-template-test

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
scripts/: build-and-release.sh  create_github_repo.py  git-safe-push.sh  release_changelog.py  setup.sh  update_changelog.py  validate_commits.py
src/gavins-v1-template/: module.py
